tests/fixtures/plugins/valid-system/index.js
let initialized = false;
let cleaned = false;

export default {
  id: 'test.valid',
  label: 'Valid Test System',
  initialize() { initialized = true; },
  cleanup() { cleaned = true; },
  enrich(d) { return d; },
  _state: () => ({ initialized, cleaned })
};
