tests/fixtures/plugins/invalid-type/index.js
export default {
  id: 'test.invalidtype',
  label: 'Invalid System Plugin'
};
